--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,6 @@
 # 0. DEV/PROD
 APP_CONFIG__DEBUG=True
+APP_CONFIG__LOGGING__LOG_FOLDER="logs"
 
 # 1. Security
 APP_CONFIG__TOKEN__SECRET_JWT_KEY="mysecretkey"
