--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,18 +71,12 @@ allow-dunder-method-names = ["__tablename__"]
 convention = "numpy"
 
 [tool.ruff.lint.per-file-ignores]
-"app/core/loggers/*.py" = [
-    "D103",     # Missing docstring in public function
-]
 "app/core/exceptions/errors.py" = [
-    "D107",     # Missing docstring in `__init__`
-]
-"app/core/exceptions/exc_handlers.py" = [
-    "D103",     # Missing docstring in public function
+    "D107",     # missing docstring in `__init__`
 ]
 "app/database/models/mixins/*.py" = [
-    "D102",     # Missing docstring in public method
-    "PLR6301",  # Method could be a function, class method, or static method
+    "D102",     # missing docstring in public method
+    "PLR6301",  # method could be a function, class method, or static method
 ]
 
 [tool.pytest.ini_options]
