--- a/.env.template
+++ b/.env.template
@@ -1,46 +1,48 @@
-# 0. DEV/PROD
-APP_CONFIG__DEBUG=True
-APP_CONFIG__LOGGING__LOG_FOLDER="logs"
+# 0. Common
+DEBUG=True
+LOGGING__LOG_FOLDER="logs"
+APP__HOST="0.0.0.0"
+APP__PORT=8000
 
 # 1. Security
-APP_CONFIG__TOKEN__SECRET_JWT_KEY="mysecretkey"
-APP_CONFIG__TOKEN__SECRET_FERNET_KEY="mysecretkey"
-APP_CONFIG__TOKEN__ALGORITHM="HS256"
+TOKEN__SECRET_JWT_KEY="mysecretkey"
+TOKEN__SECRET_FERNET_KEY="mysecretkey"
+TOKEN__ALGORITHM="HS256"
 
 # 2. Database
-APP_CONFIG__DB__USERNAME="username"
-APP_CONFIG__DB__PASSWORD="password"
-APP_CONFIG__DB__HOST="localhost"
-APP_CONFIG__DB__PORT=5432
-APP_CONFIG__DB__TABLENAME="tablename"
+DB__USERNAME="username"
+DB__PASSWORD="password"
+DB__HOST="localhost"
+DB__PORT=5432
+DB__TABLENAME="tablename"
 
 # 3. Redis
-APP_CONFIG__REDIS__HOST="localhost"
-APP_CONFIG__REDIS__PORT=6379
-APP_CONFIG__REDIS__DB_REQUEST_LIMITER=0
-APP_CONFIG__REDIS__DB_REFRESH_TOKEN=1
+REDIS__HOST="localhost"
+REDIS__PORT=6379
+REDIS__DB_REQUEST_LIMITER=0
+REDIS__DB_REFRESH_TOKEN=1
 
 # 4. Stream logger
-APP_CONFIG__LOGGING__STREAM__ENABLED=True
-APP_CONFIG__LOGGING__STREAM__LEVEL=INFO
+LOGGING__STREAM__ENABLED=True
+LOGGING__STREAM__LEVEL=INFO
 
 # 5. Common log file
-APP_CONFIG__LOGGING__COMMON_FILE__ENABLED=True
-APP_CONFIG__LOGGING__COMMON_FILE__LEVEL=INFO
-APP_CONFIG__LOGGING__COMMON_FILE__PATH="logs/{time:YYYY-MM-DD}/common.log"
-APP_CONFIG__LOGGING__COMMON_FILE__ROTATION="00:00"
-APP_CONFIG__LOGGING__COMMON_FILE__RETENTION="30 days"
+LOGGING__COMMON_FILE__ENABLED=True
+LOGGING__COMMON_FILE__LEVEL=INFO
+LOGGING__COMMON_FILE__PATH="logs/{time:YYYY-MM-DD}/common.log"
+LOGGING__COMMON_FILE__ROTATION="00:00"
+LOGGING__COMMON_FILE__RETENTION="30 days"
 
 # 6. Error log file
-APP_CONFIG__LOGGING__ERROR_FILE__ENABLED=False
-APP_CONFIG__LOGGING__ERROR_FILE__LEVEL=ERROR
-APP_CONFIG__LOGGING__ERROR_FILE__PATH="logs/{time:YYYY-MM-DD}/error.log"
-APP_CONFIG__LOGGING__ERROR_FILE__ROTATION="00:00"
-APP_CONFIG__LOGGING__ERROR_FILE__RETENTION="30 days"
+LOGGING__ERROR_FILE__ENABLED=False
+LOGGING__ERROR_FILE__LEVEL=ERROR
+LOGGING__ERROR_FILE__PATH="logs/{time:YYYY-MM-DD}/error.log"
+LOGGING__ERROR_FILE__ROTATION="00:00"
+LOGGING__ERROR_FILE__RETENTION="30 days"
 
 # 7. Json log file
-APP_CONFIG__LOGGING__JSON_FILE__ENABLED=False
-APP_CONFIG__LOGGING__JSON_FILE__LEVEL=INFO
-APP_CONFIG__LOGGING__JSON_FILE__PATH="logs/{time:YYYY-MM-DD}/json.log"
-APP_CONFIG__LOGGING__JSON_FILE__ROTATION="00:00"
-APP_CONFIG__LOGGING__JSON_FILE__RETENTION="30 days"
+LOGGING__JSON_FILE__ENABLED=False
+LOGGING__JSON_FILE__LEVEL=INFO
+LOGGING__JSON_FILE__PATH="logs/{time:YYYY-MM-DD}/json.log"
+LOGGING__JSON_FILE__ROTATION="00:00"
+LOGGING__JSON_FILE__RETENTION="30 days"
