--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
 # 0. Common
 DEBUG=True
 LOGGING__LOG_FOLDER="logs"
-APP__HOST="0.0.0.0"
+APP__HOST=0.0.0.0
 APP__PORT=8000
 
 # 1. Security
@@ -12,12 +12,12 @@ TOKEN__ALGORITHM="HS256"
 # 2. Database
 DB__USERNAME="username"
 DB__PASSWORD="password"
-DB__HOST="localhost"
+DB__HOST=localhost
 DB__PORT=5432
 DB__TABLENAME="tablename"
 
 # 3. Redis
-REDIS__HOST="localhost"
+REDIS__HOST=localhost
 REDIS__PORT=6379
 REDIS__DB_REQUEST_LIMITER=0
 REDIS__DB_REFRESH_TOKEN=1
