--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,8 @@ name = "fastapi-movie-manager"
 version = "0.1.0"
 description = "FastAPI Movie Manager Project"
 readme = "README.md"
-repository = "https://github.com/MIXgleb/fastapi-movie-manager"
 requires-python = ">=3.13"
-authors = [
-    {name = "Gleb Mikhalev", email = "gleb1@bk.ru"}
-]
+authors = [{ name = "Gleb Mikhalev", email = "gleb1@bk.ru" }]
 dependencies = [
     "alembic>=1.16.5",
     "asyncpg>=0.30.0",
@@ -25,9 +22,7 @@ dependencies = [
 ]
 
 [dependency-groups]
-lint = [
-    "ruff>=0.13.0",
-]
+lint = ["ruff>=0.13.0"]
 test = [
     "pytest>=8.4",
     "pytest-cov>=6.1",
@@ -42,10 +37,7 @@ test = [
 preview = true
 line-length = 95
 target-version = "py313"
-extend-exclude = [
-    "alembic/",
-    "tests/",
-]
+extend-exclude = ["alembic/", "tests/"]
 
 [tool.ruff.format]
 preview = true
@@ -56,14 +48,14 @@ docstring-code-format = true
 preview = true
 select = ["ALL"]
 ignore = [
-    "D203",     # blank line before class docstring (-> D211)
-    "D212",     # docstring starts from the first line (-> D213)
-    "COM812",   # missing trailing comma (due to ruff conflict)
-    "CPY001",   # copyright notice
-    "D100",     # docstring in public module
-    "D101",     # docstring in public class
-    "D104",     # docstring in public package
-    "RUF067",   # `__init__` module should only contain docstrings and re-exports
+    "D203",   # blank line before class docstring (-> D211)
+    "D212",   # docstring starts from the first line (-> D213)
+    "COM812", # missing trailing comma (due to ruff conflict)
+    "CPY001", # copyright notice
+    "D100",   # docstring in public module
+    "D101",   # docstring in public class
+    "D104",   # docstring in public package
+    "RUF067", # `__init__` module should only contain docstrings and re-exports
 ]
 
 [tool.ruff.lint.pylint]
@@ -74,18 +66,18 @@ convention = "numpy"
 
 [tool.ruff.lint.per-file-ignores]
 "scripts/*.py" = [
-    "T201",     # `print` found
-    "BLE001",   # Do not catch blind exception: `Exception`
-    "S404",     # `subprocess` module is possibly insecure
-    "S603",     # `subprocess` call: check for execution of untrusted input
-    "PLW1510",  # `subprocess.run` without explicit `check` argument
+    "T201",    # `print` found
+    "BLE001",  # Do not catch blind exception: `Exception`
+    "S404",    # `subprocess` module is possibly insecure
+    "S603",    # `subprocess` call: check for execution of untrusted input
+    "PLW1510", # `subprocess.run` without explicit `check` argument
 ]
 "app/core/exceptions/errors.py" = [
-    "D107",     # missing docstring in `__init__`
+    "D107", # missing docstring in `__init__`
 ]
 "app/database/models/mixins/*.py" = [
-    "D102",     # missing docstring in public method
-    "PLR6301",  # method could be a function, class method, or static method
+    "D102",    # missing docstring in public method
+    "PLR6301", # method could be a function, class method, or static method
 ]
 
 [tool.pytest.ini_options]
@@ -112,4 +104,4 @@ addopts = [
 [tool.coverage.run]
 # Coverage config: https://coverage.readthedocs.io/
 plugins = ["covdefaults"]
-omit  = []
+omit = []
