--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,12 @@ authors = [{ name = "Gleb Mikhalev", email = "gleb1@bk.ru" }]
 dependencies = [
     "alembic>=1.16.5",
     "asyncpg>=0.30.0",
+    "bcrypt>=5.0.0",
     "cryptography>=46.0.2",
     "fastapi-limiter>=0.1.6",
     "fastapi[standard]>=0.116.2",
     "loguru>=0.7.3",
     "orjson>=3.11.3",
-    "passlib[bcrypt]>=1.7.4",
     "psycopg2-binary>=2.9.11",
     "pydantic-settings>=2.10.1",
     "pyjwt>=2.10.1",
