adds named and bind volumes

--- a/.env.template
+++ b/.env.template
@@ -1,46 +1,49 @@
-# 0. Common
+# Common
 DEBUG=True
-LOGGING__LOG_FOLDER="logs"
+LOCAL_STORAGE="~/storage/app"
+
+# App
 APP__HOST=0.0.0.0
 APP__PORT=8000
+LOGGING__LOG_FOLDER="logs"
 
-# 1. Security
+# Security
 TOKEN__SECRET_JWT_KEY="mysecretkey"
 TOKEN__SECRET_FERNET_KEY="mysecretkey"
 TOKEN__ALGORITHM="HS256"
 
-# 2. Database
+# Database
 DB__USERNAME="username"
 DB__PASSWORD="password"
 DB__HOST=localhost
 DB__PORT=5432
 DB__TABLENAME="tablename"
 
-# 3. Redis
+# Redis
 REDIS__HOST=localhost
 REDIS__PORT=6379
 REDIS__DB_REQUEST_LIMITER=0
 REDIS__DB_REFRESH_TOKEN=1
 
-# 4. Stream logger
+# Stream logger
 LOGGING__STREAM__ENABLED=True
 LOGGING__STREAM__LEVEL=INFO
 
-# 5. Common log file
+# Common log file
 LOGGING__COMMON_FILE__ENABLED=True
 LOGGING__COMMON_FILE__LEVEL=INFO
 LOGGING__COMMON_FILE__PATH="logs/{time:YYYY-MM-DD}/common.log"
 LOGGING__COMMON_FILE__ROTATION="00:00"
 LOGGING__COMMON_FILE__RETENTION="30 days"
 
-# 6. Error log file
+# Error log file
 LOGGING__ERROR_FILE__ENABLED=False
 LOGGING__ERROR_FILE__LEVEL=ERROR
 LOGGING__ERROR_FILE__PATH="logs/{time:YYYY-MM-DD}/error.log"
 LOGGING__ERROR_FILE__ROTATION="00:00"
 LOGGING__ERROR_FILE__RETENTION="30 days"
 
-# 7. Json log file
+# Json log file
 LOGGING__JSON_FILE__ENABLED=False
 LOGGING__JSON_FILE__LEVEL=INFO
 LOGGING__JSON_FILE__PATH="logs/{time:YYYY-MM-DD}/json.log"
