--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "fastapi-movie-manager"
+name = "fastapi-movies"
 version = "0.1.0"
-description = "FastAPI Movie Manager Project"
+description = "FastAPI Movies Project"
 readme = "README.md"
 requires-python = ">=3.13"
 authors = [{ name = "Gleb Mikhalev", email = "gleb1@bk.ru" }]
