--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,10 @@ services:
     environment:
       AUTO_REMOVAL: true
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - type: bind
+        source: /var/run/docker.sock
+        target: /var/run/docker.sock
+        read_only: true
     healthcheck:
       disable: true
     entrypoint: [ "./app.sh" ]
