--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ test = [
 preview = true
 line-length = 95
 target-version = "py313"
-extend-exclude = ["alembic/", "tests/"]
+extend-exclude = ["tests/"]
 
 [tool.ruff.format]
 preview = true
@@ -65,6 +65,9 @@ allow-dunder-method-names = ["__tablename__"]
 convention = "numpy"
 
 [tool.ruff.lint.per-file-ignores]
+"alembic/*.py" = [
+    "INP001", # File is part of an implicit namespace package. Add an `__init__.py`
+]
 "scripts/*.py" = [
     "T201",    # `print` found
     "BLE001",  # Do not catch blind exception: `Exception`
